<resources>
    <string name="appName">Dynamic NavLog</string>
    <string name="linkEmail"><a href="mailto:dynamicnavlog@gmail.com\">dynamicnavlog@gmail.com</a></string>
    <string name="txtChangeLog">Change log</string>
    <string name="adStaticInfo">If this app is useful to you, please consider donation to support further development</string>
    <string name="adStaticEnjoyFlight"><b>Enjoy Your Flight</b></string>
    <string name="txtTooManyItems">Only 10 waypoints in free version are allowed. Please consider purchasing the app to disable the limit.</string>
    <string name="txtNotAllTrueTrackSet">To use the GPS assistance, all waypoints must contain co-ordinates</string>
    <string name="txtNoTakeoffPoint">Before adding a waypoint, set the takeoff coordinates by clicking on the map</string>
    <string name="txtInvalidFlightParams">Please enter Course, Wind direction, Wind speed and TAS</string>
    <string name="txtInvalidCourseAndWind">Course and Wind Direction must be between 0 and 360</string>
    <string name="txtInvalidCourse">Course must be between 0 and 360</string>
    <string name="txtInvalidDistance">Distance must be greater than 0</string>
    <string name="txtInvalidWind">Wind Direction must be between 0 and 360</string>
    <string name="txtInvalidWindSpeed">Wind speed must be at least 0 and less than airplane TAS</string>
    <string name="txtInvalidTAS">TAS must be greater than Wind speed</string>
    <string name="txtInvalidFPH">Fuel per hour must be greater than 0</string>
    <string name="txtInvalidTC">Fuel tank capacity must be greater than 0</string>
    <string name="txtDisplayCurrent">Display current Time and Fuel</string>
    <string name="txtDisplayIncremental">Display incremental Time and Fuel</string>
    <string name="txtCalculate">Calculate</string>
    <string name="txtRefresh">Refresh</string>
    <string name="txtCalculator">Calculator</string>
    <string name="txtHeadwind">Headwind</string>
    <string name="txtTailwind">Tailwind</string>
    <string name="txtCrosswind">Crosswind</string>
    <string name="txtLeftxwind">Left Xwind</string>
    <string name="txtRightxwind">Right Xwind</string>
    <string name="txtClear">AC</string>
    <string name="txtUnits">Units</string>
    <string name="txtDisplayUnits">Display units</string>
    <string name="txtMapOptions">Map options</string>
    <string name="txtSettings">Settings</string>
    <string name="txtFlightPlanSettings">Flight plan settings</string>
    <string name="txtFlightSettings">Flight settings</string>
    <string name="txtFlightPlan">Flight Plan</string>
    <string name="txtFlightPlanName">Flight plan name</string>
    <string name="txtInvalidFlightPlanName">Cannot save: Invalid flight plan name</string>
    <string name="txtFuelSettings">Fuel Settings</string>
    <string name="txtTimeStamps">Timestamps</string>
    <string name="txtSummary">Summary</string>
    <string name="txtWindAndFuelCalculator">Wind/Fuel Calculator</string>
    <string name="txtNavigationLog">Navigation Log</string>
    <string name="txtLoadFlightPlan">Load flight plan</string>
    <string name="txtFlightPlans">Flight plans</string>
    <string name="txtEditAirplane">Edit Airplane</string>
    <string name="txtAirplane">Airplane</string>
    <string name="txtAirplanes">Airplanes</string>
    <string name="txtDescend">Descend</string>
    <string name="txtTimeMeasure">Timestamps</string>
    <string name="txtWindCalculator">Wind calculator</string>
    <string name="txtFuelCalculator">Fuel consumption</string>
    <string name="txtUnitsConverter">Units converter</string>
    <string name="txtPurchase">Purchase Dynamic NavLog</string>
    <string name="txtAbout">About</string>
    <string name="txtContact">Contact</string>
    <string name="linkChangeLog"><a href="https://artyum.github.io/dynamicnavlog/changelog.html">Change log</a></string>
    <string name="linkPrivacyPolicy"><a href="https://artyum.github.io/dynamicnavlog/privacy-policy.html">Privacy policy</a></string>
    <string name="linkPermissions"><a href="https://www.youtube.com/watch?v=98Y0nIItm38">Location permissions (video)</a></string>
    <string name="txtVersion">Version</string>
    <string name="txtDensityCalculator">Density altitude</string>
    <string name="txtInvalidDialogCheck">Destination, Magnetic Track and Distance are mandatory fields</string>
    <string name="txtInvalidDensityParams">Please enter pressure and temperature</string>
    <string name="txtInvalidDensityParams2">Please enter valid values</string>
    <string name="txtInvalidTemperature">Temperature must be greater that -273.15\u2103 (-459.7\u2109)</string>
    <string name="txtInvalidTemperature2">Air temperature must be greater than dew point temperature</string>
    <string name="txtInvalidPressure">The altimeter setting should be between 800 and 1200 HPa (23.6 to 35.4 inHG)</string>
    <string name="txtInvalidElevation">Elevation must be between \-500 and 10000 meters (\-1640 to 32808 ft)</string>
    <string name="txtInvalidRadial">Radial must be between 0..360</string>
    <string name="txtInvalidRadialDist">Distance must be greater then 0</string>
    <string name="txtEnterValue">Enter the value to be converted</string>
    <string name="txtNewFlightPlan">New flight plan</string>
    <string name="txtRemoveAds">Donation</string>
    <string name="txtOptions">Options</string>
    <string name="txtPoint1">Start point</string>
    <string name="txtPoint2">End point</string>
    <string name="txtAddRadial">Radial started. Click on the map to complete the radial.</string>
    <string name="txtAirplaneSaved">Airplane saved</string>
    <string name="txtDestination">Destination</string>
    <string name="txtRadial">Radial</string>
    <string name="txtRadialMagnetic">Radial (mag.)</string>
    <string name="txtTimeAndDistance">Time &amp; distance</string>
    <string name="txtPlaneType">Plane type</string>
    <string name="txtRegistration">Registration</string>
    <string name="txtDest">Dest</string>
    <string name="txtWpt">WPT</string>
    <string name="txtNextWPT">Next</string>
    <string name="txtPrevWPT">Back</string>
    <string name="txtTt">TT</string>
    <string name="txtDec">d</string>
    <string name="txtMt">MT</string>
    <string name="txtDtk">DTK</string>
    <string name="txtDist">DIST</string>
    <string name="txtWca">WCA</string>
    <string name="txtHdg">HDG</string>
    <string name="txtGs">GS</string>
    <string name="txtTime">Time</string>
    <string name="txtFuelRequired">Fuel required</string>
    <string name="txtEta">ETA</string>
    <string name="txtEte">ETE</string>
    <string name="txtAta">ATA</string>
    <string name="txtFuel">Fuel</string>
    <string name="txtFuelUnits">Fuel units</string>
    <string name="txtFlightComputer">Flight computer</string>
    <string name="txtRemarks">Remarks</string>
    <string name="txtWptRemarks">Waypoint remarks</string>
    <string name="txtRmk">RMK</string>
    <string name="txtFrom">From</string>
    <string name="txtTo">To</string>
    <string name="txtDistance">Distance</string>
    <string name="txtDistanceUnits">Distance units</string>
    <string name="txtCourse">Course</string>
    <string name="txtTrueTrack">True course</string>
    <string name="txtDeclination">Declination</string>
    <string name="txtMagneticTrack">Magnetic course</string>
    <string name="txtFuelAtrStart">Fuel at start</string>
    <string name="txtFuelAtEnd">Fuel at end</string>
    <string name="txtFuelPerHour">Fuel per hour</string>
    <string name="txtValue">Value</string>
    <string name="txtWindDirection">Wind direction</string>
    <string name="txtWind">Wind</string>
    <string name="txtWindAndFuel">Wind and fuel</string>
    <string name="txtStationPressure">Station pressure</string>
    <string name="txtAltimeterSetting">Altimeter setting</string>
    <string name="txtTemperature">Temperature</string>
    <string name="txtAirTemperature">Air temperature</string>
    <string name="txtDewpoint">Dewpoint</string>
    <string name="txtPressureAltitude">Pressure altitude</string>
    <string name="txtDensityAltitude">Density altitude</string>
    <string name="txtDensityAltitudeNws">Density altitude (NWS)</string>
    <string name="txtDensityAltitudeAprox">Density altitude (aprox.)</string>
    <string name="txtElevations">Elevation</string>
    <string name="txtStationElevations">Station elevation</string>
    <string name="txtWindSpeed">Wind spd.</string>
    <string name="txtSpeed">Speed</string>
    <string name="txtSpeedUnits">Speed units</string>
    <string name="txtTAS">TAS</string>
    <string name="txtRange">Range</string>
    <string name="txtCruiseSpeerTAS">Cruise speed (TAS)</string>
    <string name="txtFph">Fuel/h</string>
    <string name="txtTakeoffFuel">T/O fuel</string>
    <string name="txtTank">Tank</string>
    <string name="txtTakeoffDetect">T/O detect spd (kt)</string>
    <string name="txtLandingDetect">LND detect spd (kt)</string>
    <string name="txtTankCapacity">Tank capacity</string>
    <string name="txtPerformance">Performance</string>
    <string name="txtApply">Apply</string>
    <string name="txtSaveAirplane">Save airplane</string>
    <string name="txtCancel">Cancel</string>
    <string name="txtAdd">Add</string>
    <string name="txtDelete">Delete</string>
    <string name="txtSet">Set</string>
    <string name="txtOffBlock">Off-Block</string>
    <string name="txtOffBlockTime">Off-Block time</string>
    <string name="txtTakeoff">Takeoff</string>
    <string name="txtTakeoffTime">Takeoff time</string>
    <string name="txtDeparture">Departure</string>
    <string name="txtLanding">Landing</string>
    <string name="txtLandingTime">Landing time</string>
    <string name="txtOnBlock">On-Block</string>
    <string name="txtOnBlockTime">On-Block time</string>
    <string name="txtBlockTime">Block time</string>
    <string name="txtGroundTime1">GND before T/O</string>
    <string name="txtGroundTime2">GND after LND</string>
    <string name="txtGroundTimeTotal">GND total</string>
    <string name="txtActive">Active</string>
    <string name="txtTimeUTC">Display ZULU times</string>
    <string name="txtGPS">GPS</string>
    <string name="txtGPSLost">Warning! GPS signal lost. Working in No-GPS mode.</string>
    <string name="txtWarningNoGPS">Warning! No GPS signal</string>
    <string name="txtGPSAssist">GPS assist</string>
    <string name="txtAutoNextWPT">Detect T/O, LND, WPT</string>
    <string name="txtDisplayFlightTrace">Show flight trace</string>
    <string name="txtDisplayHints">Show hints</string>
    <string name="txtDisplayRadials">Show radials</string>
    <string name="txtDisplayRadialMarkers">Show radial markers</string>
    <string name="txtDisplayWindArrow">Show wind indicator</string>
    <string name="txtKeepScreenOn">Keep the screen on</string>
    <string name="txtTotalDistance">Total distance</string>
    <string name="txtExtraDistance">Extra distance (no wind)</string>
    <string name="txtTotalTime">Total time</string>
    <string name="txtTotalFuel">Total fuel</string>
    <string name="txtSpareFuel">Fuel: required/spare</string>
    <string name="txtWarningLongClick">Warning! Hold to overwrite</string>
    <string name="txtNavlogNotReady">Navigation log is not ready</string>
    <string name="txtHoldButtonToConfirm">Hold to confirm</string>
    <string name="txtBackgroundServiceIsRunning">Dynamic NavLog is running</string>
    <string name="txtRestartFlightPlan">Restart flight plan</string>
    <string name="txtResults">Results</string>
    <string name="txtCopyFlightPlan">Copy plan (as is)</string>
    <string name="txtCopyInvertTrack">Copy plan (inverted)</string>
    <string name="txtExportCSV">Export plan as CSV</string>
    <string name="txtWaypoint">Waypoint</string>
    <string name="txtLatitude">Latitude</string>
    <string name="txtLongitude">Longitude</string>
</resources>