<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtNavlogDest"
            style="@style/navlogItem"
            android:layout_width="@dimen/recyclerViewDescWidth"
            android:gravity="start|center_vertical"
            android:lines="1"
            android:text="@string/txtDest"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/txtNavlogTt"
            style="@style/navlogItem"
            android:text="@string/txtTt" />

        <TextView
            android:id="@+id/txtNavlogDec"
            style="@style/navlogItem"
            android:text="@string/txtDec" />

        <TextView
            android:id="@+id/txtNavlogMt"
            style="@style/navlogItem"
            android:text="@string/txtMt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtNavlogDist"
            style="@style/navlogItem"
            android:text="@string/txtDist" />

        <TextView
            android:id="@+id/txtNavlogWca"
            style="@style/navlogItem"
            android:text="@string/txtWca" />

        <TextView
            android:id="@+id/txtNavlogHdg"
            style="@style/navlogItem"
            android:text="@string/txtHdg"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtNavlogGs"
            style="@style/navlogItem"
            android:text="@string/txtGs" />

        <TextView
            android:id="@+id/txtNavlogTime"
            style="@style/navlogItem"
            android:layout_width="90dp"
            android:text="@string/txtTime" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/txtNavlogEtaCell"
            style="@style/navlogItem"
            android:layout_width="90dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtNavlogEta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtEta"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtNavlogEtaUnits"
                style="@style/navlogUnits"
                app:layout_constraintBaseline_toBaselineOf="@id/txtNavlogEta"
                app:layout_constraintLeft_toRightOf="@id/txtNavlogEta" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/txtNavlogAtaCell"
            style="@style/navlogItem"
            android:layout_width="90dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtNavlogAta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtAta"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtNavlogAtaUnits"
                style="@style/navlogUnits"
                app:layout_constraintBaseline_toBaselineOf="@id/txtNavlogAta"
                app:layout_constraintLeft_toRightOf="@id/txtNavlogAta" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/txtNavlogFuel"
            style="@style/navlogItem"
            android:text="@string/txtFuel" />

    </LinearLayout>
</androidx.cardview.widget.CardView>