<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    android:paddingVertical="5dp">
    <LinearLayout
        style="@style/dividerBox"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="10dp">

        <View
            style="@style/dividerLine"
            android:layout_weight="1" />

        <TextView
            style="@style/dividerText"
            android:text="@string/txtWaypoint" />

        <View
            style="@style/dividerLine"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/navDialog"
            android:hint="@string/txtDestination">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialogDest"
                style="@style/navDialogText"
                android:inputType="text|textCapCharacters" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView style="@style/spacer" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start">

            <CheckBox
                android:id="@+id/dialogCheckboxActive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtActive" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/navDialog"
            android:hint="@string/txtTrueTrack">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialogTt"
                style="@style/navDialogText"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView style="@style/spacer" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/navDialog"
            android:hint="@string/txtDeclination">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialogDeclination"
                style="@style/navDialogText"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/navDialog"
            android:hint="@string/txtMagneticTrack">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialogMt"
                style="@style/navDialogText"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView style="@style/spacer" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/boxDistance"
            style="@style/navDialog"
            android:hint="@string/txtDistance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialogDist"
                style="@style/navDialogText"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialogCoordsRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/navDialog"
            android:hint="@string/txtLatitude">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialogLat"
                style="@style/navDialogText"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView style="@style/spacer" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/navDialog"
            android:hint="@string/txtLongitude">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialogLng"
                style="@style/navDialogText"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/navDialog"
            android:hint="@string/txtRemarks">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialogRemarks"
                style="@style/navDialogRemarks" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btnDialogRemove"
            style="@style/navDialogBtn"
            android:text="@string/txtDelete"
            android:textColor="@color/red" />

        <Button
            android:id="@+id/btnDialogCancel"
            style="@style/navDialogBtn"
            android:layout_marginHorizontal="5dp"
            android:text="@string/txtCancel" />

        <Button
            android:id="@+id/btnDialogSubmit"
            style="@style/navDialogBtn"
            android:text="@string/txtApply" />
    </LinearLayout>
</LinearLayout>
