<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    android:paddingVertical="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/navDialog"
            android:hint="@string/txtRadial">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialogRadial"
                style="@style/navDialogText"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView style="@style/spacer" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/labelDistance"
            style="@style/navDialog"
            android:hint="@string/txtDistance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialogDistance"
                style="@style/navDialogText" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/navDialog"
            android:hint="@string/txtLatitude">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialogLat"
                style="@style/navDialogText"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView style="@style/spacer" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/navDialog"
            android:hint="@string/txtLongitude">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialogLng"
                style="@style/navDialogText"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btnDialogRemove"
            style="@style/navDialogBtn"
            android:text="@string/txtDelete"
            android:textColor="@color/red" />

        <Button
            android:id="@+id/btnDialogCancel"
            style="@style/navDialogBtn"
            android:layout_marginHorizontal="5dp"
            android:text="@string/txtCancel" />

        <Button
            android:id="@+id/btnDialogSubmit"
            style="@style/navDialogBtn"
            android:text="@string/txtApply" />
    </LinearLayout>
</LinearLayout>
